[gd_scene load_steps=10 format=2]

[ext_resource path="res://Interface/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Treasure Hunters/Wood and Paper UI/Sprites/Prefabs/6.png" type="Texture" id=2]
[ext_resource path="res://Interface/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Treasure Hunters/Wood and Paper UI/Sprites/Sliders/3.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/Wood and Paper UI/Sprites/Sliders/slider.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/Font/Early GameBoy.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 7, 6 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.862745, 0.286275, 0.286275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )
anti_aliasing = false

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.196078, 0.239216, 0.47451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/CenterContainer"]
margin_left = 306.0
margin_top = 94.0
margin_right = 718.0
margin_bottom = 506.0
rect_min_size = Vector2( 412, 412 )
rect_pivot_offset = Vector2( 206, 206 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="ColorRect/CenterContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -75.0
margin_right = 71.0
margin_bottom = 75.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 71, 75 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="ColorRect/CenterContainer/TextureRect/Main" instance=ExtResource( 1 )]
margin_right = 142.0
margin_bottom = 47.0
text = "resume"

[node name="Quit" parent="ColorRect/CenterContainer/TextureRect/Main" instance=ExtResource( 1 )]
margin_top = 51.0
margin_right = 142.0
margin_bottom = 98.0
text = "quit"

[node name="Options" parent="ColorRect/CenterContainer/TextureRect/Main" instance=ExtResource( 1 )]
margin_top = 102.0
margin_right = 142.0
margin_bottom = 149.0
text = "options"

[node name="Options" type="VBoxContainer" parent="ColorRect/CenterContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -75.0
margin_right = 71.0
margin_bottom = 75.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 71, 75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master" type="Label" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_right = 142.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Master"
align = 1

[node name="MasterSlider" type="HSlider" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_top = 24.0
margin_right = 142.0
margin_bottom = 36.0
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -20.0
max_value = 0.0

[node name="Music" type="Label" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_top = 40.0
margin_right = 142.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Music"
align = 1

[node name="MusicSlider" type="HSlider" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_top = 64.0
margin_right = 142.0
margin_bottom = 76.0
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -20.0
max_value = 0.0

[node name="Sounds" type="Label" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_top = 80.0
margin_right = 142.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.196078, 0.239216, 1 )
text = "Sounds"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="ColorRect/CenterContainer/TextureRect/Options"]
margin_top = 104.0
margin_right = 142.0
margin_bottom = 116.0
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -20.0
max_value = 0.0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ColorRect/CenterContainer/TextureRect/Main/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/TextureRect/Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/TextureRect/Main/Options" to="." method="_on_Options_pressed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/TextureRect/Options/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/TextureRect/Options/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/TextureRect/Options/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
